# ion-python

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  C_EXTENSION.md  MANIFEST.in  NOTICE  README.md  bandit.yml  hkc_dataset_gen.py  install.py  pyproject.toml  pytest.ini  requirements.txt  requirements_benchmark.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: PR-content-check.yml  codeql-analysis.yml  main.yml  performance-regression.yml  release.yml
amazon/: __init__.py
amazon/ion/: CMakeLists.txt  __init__.py  _ioncmodule.h  binary.py  blocking.py  core.py  encoder.py  equivalence.py  exceptions.py  ion_py_objects.py  ionc_ctypes.py  ioncmodule.c  json_encoder.py  protonic_text_reader.py  protons.py  reader.py  reader_binary.py  reader_managed.py  reader_text.py  reader_text2.py  simple_harness.py  simple_types.py  simpleion.py  sliceable_buffer.py  symbols.py  text.py  timestamp.c  util.py  writer.py  writer_binary.py  writer_binary_raw.py  writer_binary_raw_fields.py  writer_buffer.py  writer_text.py
amazon/ionbenchmark/: API.py  Command.py  Format.py  Io_type.py  __init__.py  benchmark_runner.py  benchmark_spec.py  cbor_load_dump.py  format_conversion_correct.py  format_conversion_inaccurate.py  ion_benchmark_cli.py  ion_load_dump.py  json_load_dump.py  json_newline_vs_list_repro.py  proto.py  proto_tools.py  report.py  sample_dist.py  self_describing_proto.proto  self_describing_proto.py  util.py
amazon/protonic/: data_source.py  protons.py  test_data_source.py
docs/: Makefile  amazon.ion.rst  amazon.rst  conf.py  index.rst  modules.rst
src/: CMakeLists.txt  _ioncmodule.h  ioncmodule.c
src-python/amazon/: __init__.py
src-python/amazon/ion/: __init__.py  exceptions.py  json_encoder.py  reader_managed.py  reader_text.py  simple_types.py  simpleion.py  symbols.py  util.py  writer_binary.py  writer_buffer.py  writer_text.py
src-python/amazon/ionbenchmark/: __init__.py  benchmark_spec.py  cbor_load_dump.py  ion_benchmark_cli.py  self_describing_proto.py  self_describing_proto_pb2.py
tests/: CMakeLists.txt  __init__.py  benchmarks.py  event_aliases.py  reader_util.py  simple_harness.py  simple_write_harness.py  test_benchmark_cli.py  test_benchmark_spec.py  test_binary_reader.py  test_cookbook.py  test_core_iontype.py  test_core_multimap.py  test_debug.py  test_decimal.py  test_equivalence.py  test_events.py  test_extension.c  test_json_encoder.py  test_multimap_IonPyDict.py  test_package.py  test_protonic_reader.py  test_protons.py  test_reader_base.py  test_reader_binary.py  test_reader_buffer.py  test_reader_managed.py  test_reader_text.py  test_simple_types.py  test_simpleion.py  test_simpleion_item_sort_key.py  test_sliceable_buffer.py  test_symbols_catalog.py  test_symbols_table.py  test_timestamp.py  test_util_enum.py  test_util_record.py  test_util_unicode.py  test_vectors.py  test_writer_base.py  (+7 more)
tests/benchmark_sample_data/: integers.10n
tests/benchmark_sample_data/cbor/: sample
tests/benchmark_sample_data/compare/: cats_baseline.ion  cats_large_regression.ion  cats_small_regression.ion  f1  f2  f3
tests/benchmark_sample_data/sample_spec/: README.md  cat.cbor  cat.desc  cat.ion  cat.json  cat.proto  cat.protobuf_data  cat.sd_protobuf_data  multiple_top_level_object.cbor  multiple_top_level_object.ion  multiple_top_level_object.json  spec.ion
